kubectl/openclaw/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openclaw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openclaw
  template:
    metadata:
      labels:
        app: openclaw
    spec:
      containers:
        - name: openclaw
          image: ghcr.io/openclaw/openclaw:latest
          resources:
            requests:
              memory: "512Mi"
              cpu: "10m"
            limits:
              memory: "2Gi"
              cpu: "1000m"  
          volumeMounts:
            - mountPath: /home/node/.openclaw
              name: nfs
              subPath: applications/openclaw           
          # command:
          #   - openclaw gateway run
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 15
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"    
          effect: "NoExecute"    
          tolerationSeconds: 15          
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: truenas-pvc
      
---
apiVersion: v1
kind: Service
metadata:
  name: openclaw-service
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  selector:
    app: openclaw
  ports:
    - name: http
      port: 18789
      targetPort: 18789
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openclaw-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-security-headers@kubernetescrd
spec:
  tls:
    - hosts:
      - openclaw.joeberry.org
  rules:
  - host: openclaw.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 9000         
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openclaw-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: openclaw.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authentik-server
            port:
              number: 9000
